src/sttp/data/parser/FilterExpressionSyntaxParser.py
# Generated from FilterExpressionSyntax.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class FilterExpressionSyntaxParser ( Parser ):

    grammarFileName = "FilterExpressionSyntax.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "';'", "','", "'-'", "'+'", "'('", "')'", 
                     "'!'", "'~'", "'==='", "'<'", "'<='", "'>'", "'>='", 
                     "'='", "'=='", "'!='", "'!=='", "'<>'", "'&&'", "'||'", 
                     "'<<'", "'>>'", "'&'", "'|'", "'^'", "'*'", "'/'", 
                     "'%'" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                      "<INVALID>", "K_ABS", "K_AND", "K_ASC", "K_BINARY", 
                      "K_BY", "K_CEILING", "K_COALESCE", "K_CONVERT", "K_CONTAINS", 
                      "K_DATEADD", "K_DATEDIFF", "K_DATEPART", "K_DESC", 
                      "K_ENDSWITH", "K_FILTER", "K_FLOOR", "K_IIF", "K_IN", 
                      "K_INDEXOF", "K_IS", "K_ISDATE", "K_ISINTEGER", "K_ISGUID", 
                      "K_ISNULL", "K_ISNUMERIC", "K_LASTINDEXOF", "K_LEN", 
                      "K_LIKE", "K_LOWER", "K_MAXOF", "K_MINOF", "K_NOT", 
                      "K_NOW", "K_NTHINDEXOF", "K_NULL", "K_OR", "K_ORDER", 
                      "K_POWER", "K_REGEXMATCH", "K_REGEXVAL", "K_REPLACE", 
                      "K_REVERSE", "K_ROUND", "K_SQRT", "K_SPLIT", "K_STARTSWITH", 
                      "K_STRCOUNT", "K_STRCMP", "K_SUBSTR", "K_TOP", "K_TRIM", 
                      "K_TRIMLEFT", "K_TRIMRIGHT", "K_UPPER", "K_UTCNOW", 
                      "K_WHERE", "K_XOR", "BOOLEAN_LITERAL", "IDENTIFIER", 
                      "INTEGER_LITERAL", "NUMERIC_LITERAL", "GUID_LITERAL", 
                      "MEASUREMENT_KEY_LITERAL", "POINT_TAG_LITERAL", "STRING_LITERAL", 
                      "DATETIME_LITERAL", "SINGLE_LINE_COMMENT", "MULTILINE_COMMENT", 
                      "SPACES", "UNEXPECTED_CHAR" ]

    RULE_parse = 0
    RULE_err = 1
    RULE_filterExpressionStatementList = 2
    RULE_filterExpressionStatement = 3
    RULE_identifierStatement = 4
    RULE_filterStatement = 5
    RULE_topLimit = 6
    RULE_orderingTerm = 7
    RULE_expressionList = 8
    RULE_expression = 9
    RULE_predicateExpression = 10
    RULE_valueExpression = 11
    RULE_notOperator = 12
    RULE_unaryOperator = 13
    RULE_exactMatchModifier = 14
    RULE_comparisonOperator = 15
    RULE_logicalOperator = 16
    RULE_bitwiseOperator = 17
    RULE_mathOperator = 18
    RULE_functionName = 19
    RULE_functionExpression = 20
    RULE_literalValue = 21
    RULE_tableName = 22
    RULE_columnName = 23
    RULE_orderByColumnName = 24

    ruleNames =  [ "parse", "err", "filterExpressionStatementList", "filterExpressionStatement", 
                   "identifierStatement", "filterStatement", "topLimit", 
                   "orderingTerm", "expressionList", "expression", "predicateExpression", 
                   "valueExpression", "notOperator", "unaryOperator", "exactMatchModifier", 
                   "comparisonOperator", "logicalOperator", "bitwiseOperator", 
                   "mathOperator", "functionName", "functionExpression", 
                   "literalValue", "tableName", "columnName", "orderByColumnName" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    T__2=3
    T__3=4
    T__4=5
    T__5=6
    T__6=7
    T__7=8
    T__8=9
    T__9=10
    T__10=11
    T__11=12
    T__12=13
    T__13=14
    T__14=15
    T__15=16
    T__16=17
    T__17=18
    T__18=19
    T__19=20
    T__20=21
    T__21=22
    T__22=23
    T__23=24
    T__24=25
    T__25=26
    T__26=27
    T__27=28
    K_ABS=29
    K_AND=30
    K_ASC=31
    K_BINARY=32
    K_BY=33
    K_CEILING=34
    K_COALESCE=35
    K_CONVERT=36
    K_CONTAINS=37
    K_DATEADD=38
    K_DATEDIFF=39
    K_DATEPART=40
    K_DESC=41
    K_ENDSWITH=42
    K_FILTER=43
    K_FLOOR=44
    K_IIF=45
    K_IN=46
    K_INDEXOF=47
    K_IS=48
    K_ISDATE=49
    K_ISINTEGER=50
    K_ISGUID=51
    K_ISNULL=52
    K_ISNUMERIC=53
    K_LASTINDEXOF=54
    K_LEN=55
    K_LIKE=56
    K_LOWER=57
    K_MAXOF=58
    K_MINOF=59
    K_NOT=60
    K_NOW=61
    K_NTHINDEXOF=62
    K_NULL=63
    K_OR=64
    K_ORDER=65
    K_POWER=66
    K_REGEXMATCH=67
    K_REGEXVAL=68
    K_REPLACE=69
    K_REVERSE=70
    K_ROUND=71
    K_SQRT=72
    K_SPLIT=73
    K_STARTSWITH=74
    K_STRCOUNT=75
    K_STRCMP=76
    K_SUBSTR=77
    K_TOP=78
    K_TRIM=79
    K_TRIMLEFT=80
    K_TRIMRIGHT=81
    K_UPPER=82
    K_UTCNOW=83
    K_WHERE=84
    K_XOR=85
    BOOLEAN_LITERAL=86
    IDENTIFIER=87
    INTEGER_LITERAL=88
    NUMERIC_LITERAL=89
    GUID_LITERAL=90
    MEASUREMENT_KEY_LITERAL=91
    POINT_TAG_LITERAL=92
    STRING_LITERAL=93
    DATETIME_LITERAL=94
    SINGLE_LINE_COMMENT=95
    MULTILINE_COMMENT=96
    SPACES=97
    UNEXPECTED_CHAR=98

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ParseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(FilterExpressionSyntaxParser.EOF, 0)

        def filterExpressionStatementList(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.FilterExpressionStatementListContext,0)


        def err(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.ErrContext,0)


        def getRuleIndex(self):
            return FilterExpressionSyntaxParser.RULE_parse

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParse" ):
                listener.enterParse(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParse" ):
                listener.exitParse(self)




    def parse(self):

        localctx = FilterExpressionSyntaxParser.ParseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_parse)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1, 3, 4, 5, 7, 8, 29, 34, 35, 36, 37, 38, 39, 40, 42, 43, 44, 45, 47, 49, 50, 51, 52, 53, 54, 55, 57, 58, 59, 60, 61, 62, 63, 66, 67, 68, 69, 70, 71, 72, 73, 74, 75, 76, 77, 79, 80, 81, 82, 83, 86, 87, 88, 89, 90, 91, 92, 93, 94]:
                self.state = 50
                self.filterExpressionStatementList()
                pass
            elif token in [98]:
                self.state = 51
                self.err()
                pass
            else:
                raise NoViableAltException(self)

            self.state = 54
            self.match(FilterExpressionSyntaxParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ErrContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self._UNEXPECTED_CHAR = None # Token

        def UNEXPECTED_CHAR(self):
            return self.getToken(FilterExpressionSyntaxParser.UNEXPECTED_CHAR, 0)

        def getRuleIndex(self):
            return FilterExpressionSyntaxParser.RULE_err

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterErr" ):
                listener.enterErr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitErr" ):
                listener.exitErr(self)




    def err(self):

        localctx = FilterExpressionSyntaxParser.ErrContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_err)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 56
            localctx._UNEXPECTED_CHAR = self.match(FilterExpressionSyntaxParser.UNEXPECTED_CHAR)

            raise RuntimeError("Unexpected character: " + (None if localctx._UNEXPECTED_CHAR is None else localctx._UNEXPECTED_CHAR.text));
               
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterExpressionStatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def filterExpressionStatement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FilterExpressionSyntaxParser.FilterExpressionStatementContext)
            else:
                return self.getTypedRuleContext(FilterExpressionSyntaxParser.FilterExpressionStatementContext,i)


        def getRuleIndex(self):
            return FilterExpressionSyntaxParser.RULE_filterExpressionStatementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterExpressionStatementList" ):
                listener.enterFilterExpressionStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterExpressionStatementList" ):
                listener.exitFilterExpressionStatementList(self)




    def filterExpressionStatementList(self):

        localctx = FilterExpressionSyntaxParser.FilterExpressionStatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_filterExpressionStatementList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 59
                self.match(FilterExpressionSyntaxParser.T__0)
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.filterExpressionStatement()
            self.state = 74
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,3,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 67 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while True:
                        self.state = 66
                        self.match(FilterExpressionSyntaxParser.T__0)
                        self.state = 69 
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)
                        if not (_la==1):
                            break

                    self.state = 71
                    self.filterExpressionStatement() 
                self.state = 76
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,3,self._ctx)

            self.state = 80
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 77
                self.match(FilterExpressionSyntaxParser.T__0)
                self.state = 82
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterExpressionStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def identifierStatement(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.IdentifierStatementContext,0)


        def filterStatement(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.FilterStatementContext,0)


        def expression(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.ExpressionContext,0)


        def getRuleIndex(self):
            return FilterExpressionSyntaxParser.RULE_filterExpressionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterExpressionStatement" ):
                listener.enterFilterExpressionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterExpressionStatement" ):
                listener.exitFilterExpressionStatement(self)




    def filterExpressionStatement(self):

        localctx = FilterExpressionSyntaxParser.FilterExpressionStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_filterExpressionStatement)
        try:
            self.state = 86
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 83
                self.identifierStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 84
                self.filterStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 85
                self.expression(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IdentifierStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def GUID_LITERAL(self):
            return self.getToken(FilterExpressionSyntaxParser.GUID_LITERAL, 0)

        def MEASUREMENT_KEY_LITERAL(self):
            return self.getToken(FilterExpressionSyntaxParser.MEASUREMENT_KEY_LITERAL, 0)

        def POINT_TAG_LITERAL(self):
            return self.getToken(FilterExpressionSyntaxParser.POINT_TAG_LITERAL, 0)

        def getRuleIndex(self):
            return FilterExpressionSyntaxParser.RULE_identifierStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIdentifierStatement" ):
                listener.enterIdentifierStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIdentifierStatement" ):
                listener.exitIdentifierStatement(self)




    def identifierStatement(self):

        localctx = FilterExpressionSyntaxParser.IdentifierStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_identifierStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 88
            _la = self._input.LA(1)
            if not((((_la - 90)) & ~0x3f) == 0 and ((1 << (_la - 90)) & 7) != 0):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FilterStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def K_FILTER(self):
            return self.getToken(FilterExpressionSyntaxParser.K_FILTER, 0)

        def tableName(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.TableNameContext,0)


        def K_WHERE(self):
            return self.getToken(FilterExpressionSyntaxParser.K_WHERE, 0)

        def expression(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.ExpressionContext,0)


        def K_TOP(self):
            return self.getToken(FilterExpressionSyntaxParser.K_TOP, 0)

        def topLimit(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.TopLimitContext,0)


        def K_ORDER(self):
            return self.getToken(FilterExpressionSyntaxParser.K_ORDER, 0)

        def K_BY(self):
            return self.getToken(FilterExpressionSyntaxParser.K_BY, 0)

        def orderingTerm(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(FilterExpressionSyntaxParser.OrderingTermContext)
            else:
                return self.getTypedRuleContext(FilterExpressionSyntaxParser.OrderingTermContext,i)


        def getRuleIndex(self):
            return FilterExpressionSyntaxParser.RULE_filterStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFilterStatement" ):
                listener.enterFilterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFilterStatement" ):
                listener.exitFilterStatement(self)




    def filterStatement(self):

        localctx = FilterExpressionSyntaxParser.FilterStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_filterStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 90
            self.match(FilterExpressionSyntaxParser.K_FILTER)
            self.state = 93
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==78:
                self.state = 91
                self.match(FilterExpressionSyntaxParser.K_TOP)
                self.state = 92
                self.topLimit()


            self.state = 95
            self.tableName()
            self.state = 96
            self.match(FilterExpressionSyntaxParser.K_WHERE)
            self.state = 97
            self.expression(0)
            self.state = 108
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==65:
                self.state = 98
                self.match(FilterExpressionSyntaxParser.K_ORDER)
                self.state = 99
                self.match(FilterExpressionSyntaxParser.K_BY)
                self.state = 100
                self.orderingTerm()
                self.state = 105
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==2:
                    self.state = 101
                    self.match(FilterExpressionSyntaxParser.T__1)
                    self.state = 102
                    self.orderingTerm()
                    self.state = 107
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)



        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TopLimitContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INTEGER_LITERAL(self):
            return self.getToken(FilterExpressionSyntaxParser.INTEGER_LITERAL, 0)

        def getRuleIndex(self):
            return FilterExpressionSyntaxParser.RULE_topLimit

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTopLimit" ):
                listener.enterTopLimit(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTopLimit" ):
                listener.exitTopLimit(self)




    def topLimit(self):

        localctx = FilterExpressionSyntaxParser.TopLimitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_topLimit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3 or _la==4:
                self.state = 110
                _la = self._input.LA(1)
                if not(_la==3 or _la==4):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 113
            self.match(FilterExpressionSyntaxParser.INTEGER_LITERAL)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OrderingTermContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def orderByColumnName(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.OrderByColumnNameContext,0)


        def exactMatchModifier(self):
            return self.getTypedRuleContext(FilterExpressionSyntaxParser.ExactMatchModifierContext,0)


        def K_ASC(self):
            return self.getToken(FilterExpressionSyntaxParser.K_ASC, 0)

        def K_DESC(self):
            return self.getToken(FilterExpressionSyntaxParser.K_DESC, 0)

        def getRuleIndex(self):
            return FilterExpressionSyntaxParser.RULE_orderingTerm

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOrderingTerm" ):
                listener.enterOrderingTerm(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOrderingTerm" ):
                listener.exitOrderingTerm(self)




    def orderingTerm(self):

        localctx = FilterExpressionSyntaxParser.OrderingTermContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_orderingTerm)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==9 or _la==32:
                self.state = 115
                self.exactMatchModifier()


            self.state = 118
            self.orderByColumnName()
            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==31 or _la==41:
                self.state = 119
                _la = self._input.LA(1)
                if not(_la==31 or _la==41):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressionListContext(ParserRuleContext):
        __slots__ = 'parser'
